// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Component: Section Renders without exploding as .about 1`] = `
<section
  class="jsx-3734640297 about"
/>
`;

exports[`Component: Section Renders without exploding as .booking 1`] = `
<section
  class="jsx-3734640297 booking"
/>
`;

exports[`Component: Section Renders without exploding as .gallery 1`] = `
<section
  class="jsx-3734640297 gallery"
/>
`;

exports[`Component: Section Renders without exploding as .services 1`] = `
<section
  class="jsx-3734640297 services"
/>
`;
